Update main gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-/*.torrent
-/*.flac
-/*.mp3
-/*.wav
-/*.vob
-/*.mpg
-/*.mkv
-/*.mp4
+**/*.torrent
+**/*.flac
+**/*.mp3
+**/*.wav
+**/*.vob
+**/*.mpg
+**/*.mkv
+**/*.mp4
+**/*.m4a
+**/*.webm
+**/*.log
