--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ yarn-error.log*
 /bin
 
 # other
+torrent
 **/*.torrent
 **/*.flac
 **/*.mp3
@@ -45,4 +46,6 @@ yarn-error.log*
 **/*.ogg
 **/*.ape
 **/*.mpeg
+**/*.rar
+**/*.zip
 **/*.log
