--- a/2023/2023-05-28 - Napa Valley Expo (BottleRock Festival), NAPA, CA, USA/.gitignore
+++ b/2023/2023-05-28 - Napa Valley Expo (BottleRock Festival), NAPA, CA, USA/.gitignore
@@ -1,4 +1,18 @@
+temp
+**/*.torrent
 **/*.flac
+**/*.mp3
+**/*.ogg
+**/*.wav
+**/*.vob
+**/*.mpg
+**/*.mkv
+**/*.mp4
 **/*.m4a
 **/*.webm
-**/*.mp3
+**/*.ts
+**/*.avi
+**/*.rar
+**/*.zip
+**/*.log
+/\[MISC\]
