--- a/2016/.gitignore
+++ b/2016/.gitignore
@@ -1,6 +1,19 @@
+temp
+**/*.torrent
 **/*.flac
-**/*.ts
+**/*.mp3
+**/*.ogg
+**/*.wav
+**/*.vob
+**/*.mpg
+**/*.mkv
+**/*.m2ts
+**/*.mp4
 **/*.m4a
 **/*.webm
-**/*.mp3
-/\[MISC\]
+**/*.ts
+**/*.avi
+**/*.rar
+**/*.zip
+**/*.log
+**/Thumbs.db
