--- a/2017/.gitignore
+++ b/2017/.gitignore
@@ -7,6 +7,7 @@ temp
 **/*.vob
 **/*.mpg
 **/*.mkv
+**/*.m2ts
 **/*.mp4
 **/*.m4a
 **/*.webm
@@ -15,3 +16,4 @@ temp
 **/*.rar
 **/*.zip
 **/*.log
+**/Thumbs.db
