Some warn fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://jhap1982.github.io/giveituruguay",
+  "homepage": "https://jhap1982.github.io/giveituruguay",
   "name": "giu-react",
   "version": "0.1.0",
   "private": true,
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^5.0.0",
     "jest-editor-support": "^31.1.0"
